# django_drf_multi_tenancy

./: README.md  docker-compose.yml  pyproject.toml
django_multi_tenancy/: manage.py
django_multi_tenancy/app/: admin.py  middleware.py  models.py
django_multi_tenancy/app/management/commands/: setup_public_tenant.py  setup_real_tenant.py
django_multi_tenancy/app/migrations/: 0001_initial.py
django_multi_tenancy/django_multi_tenancy/: asgi.py  settings.py  urls.py  wsgi.py
django_multi_tenancy/hotel/: models.py  urls.py  views.py
django_multi_tenancy/hotel/migrations/: 0001_initial.py  0002_alter_hotel_picture.py
